--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2094,6 +2094,7 @@ input, select, textarea {
 			}
 
 			.image.thumb:hover:before {
+				background: url("images/overlay.png"), url("images/overlay.png");
 				opacity: 1.0;
 			}
 
